syntax="proto3";
package merak;
option go_package = "merak/";

enum OperationType {
    INFO = 0;
    CREATE = 1;
    UPDATE = 2;
    DELETE = 3;
  }

enum MessageType {
    FULL = 0;
    DELTA = 1;
}

enum ReturnCode {
  OK = 0;
  FAILED = 1;
}

message ReturnMessage {
  ReturnCode return_code = 1;
  string return_message = 2;
}
